styles/styles.css
/*Fuentes*/
@font-face {
  font-family: "OpenSans";
  src: url(../fonts/OpenSans-Italic.woff2);
  font-weight: 400;
  font-style: italic;
}

@font-face {
  font-family: "ArchivoBlack";
  src: url(../fonts/ArchivoBlack-Regular.woff2);
}

body {
  margin: 0;
  font-family: "OpenSans", sans-serif;
  background-color: #0f0f1a;
  color: white;

  background:
    radial-gradient(
      circle at calc(50% - 400px) 200px,
      rgba(109, 109, 255, 0.25),
      transparent 40%
    ),
    radial-gradient(
      circle at calc(50% + 400px) 100px,
      rgba(255, 0, 150, 0.2),
      transparent 40%
    ),
    #0f0f1a;
}

.hero {
  padding: 80px 40px;
}

.hero__container {
  display: flex;
  align-items: center;
  justify-content: space-between;
  max-width: 1100px;
  margin: 0 auto;
}

.hero__text {
  max-width: 500px;
}

.hero__title {
  font-family: "ArchivoBlack", sans-serif;
}

.hero__subtitle {
  font-size: 20px;
  opacity: 0.7;
}

.hero__image {
  flex-shrink: 0;
}

.hero__image img {
  width: 300px;
  height: 300px;
  object-fit: cover;
  border-radius: 20px;
  display: block;
}

.projects {
  padding: 100px 40px;
}

.container {
  max-width: 1100px;
  margin: 0 auto;
}

.projects__titile {
  font-family: "ArchivoBlack", sans-serif;
  font-size: 32px;
  margin-bottom: 40px;
}

.projects__grid {
  display: grid;
  grid-template-columns: repeat(auto-fit, minmax(280px, 1fr));
  gap: 20px;
}

.project-card {
  position: relative;
  width: 300px;
  height: 180px;
  overflow: hidden;
  border-radius: 16px;
  aspect-ratio: 16 / 9;
  cursor: pointer;
}

.project-card:hover {
  transform: scale(1.03);
  transition: 0.3s;
}

.project-card img {
  width: 100%;
  height: 100%;
  object-fit: cover;
}

.project-card__overlay {
  position: absolute;
  bottom: 0;
  left: 0;
  width: 100%;
  height: 100%;

  display: flex;
  align-items: flex-end;
  padding: 16px;

  background: linear-gradient(to top, rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0));
}

.project-card__overlay h3 {
  margin: 0;
  padding: 20px;
}

.project-card__overlay p {
  font-size: 14px;
  opacity: 0.8;
  margin: 4px 0 0;
}

@media (max-width: 767px) {
  .hero__container {
    flex-direction: column;
    text-align: center;
  }

  .hero__image {
    margin-top: 20px;
  }

  .hero__image img {
    width: 100%;
    max-width: 280px;
    height: 280px;
  }
}

